--- a/furble.html
+++ b/furble.html
@@ -9,7 +9,7 @@
     .row { display: flex; margin: .6em 0; align-items: center }
     .row button, .row input[type=range] { flex-grow: 1; margin: .2em; height: 3em}
 
-    #out { position: absolute; bottom: 0; left: 0; background: #eee; overflow: scroll; width: 100%; height: 22em; padding: 0.5em }
+    #out { display: none; position: absolute; bottom: 0; left: 0; background: #eee; overflow: scroll; width: 100%; height: 12em; padding: 0.5em }
 
     h1 { font-size: 15pt; margin: 0 0 0.3em 0}
     progress { width: 100%; display:none}
@@ -28,6 +28,7 @@
     <button onclick='setAntennaColor(255, 0,0)'>Red</button>
     <button onclick='setAntennaColor(0, 255,0)'>Green</button>
     <button onclick='setAntennaColor(0, 0, 255)'>Blue</button>
+    <button onclick='cycleDebug()'>Eye Debug</button>
 </div>
 
 <div class='row'>
@@ -37,6 +38,10 @@
     <button onclick='triggerAction(53,0,0,4)'>Ooh</button>
 </div>
 
+<div class='row'>
+    <input id='dlcname' value='dlc/tu012700.dlc'><button onclick="fetchAndUploadDLC(document.getElementById('dlcname').value)">Upload</button>"
+</div>
+<progress id='dlcprogress'/>
 <div id="out" style="white-space:pre">Console Log
 </div>
 <script>
