--- a/furble.html
+++ b/furble.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8" />
@@ -39,7 +40,7 @@
 </div>
 
 <div class='row'>
-    <input id='dlcname' value='dlc/tu012700.dlc'><button onclick="fetchAndUploadDLC(document.getElementById('dlcname').value)">Upload</button>"
+    <input id='dlcname' value='dlc/tu012700.dlc'><button onclick="fetchAndUploadDLC(document.getElementById('dlcname').value)">Upload</button>
 </div>
 <progress id='dlcprogress'/>
 <div id="out" style="white-space:pre">Console Log
