--- a/furble.html
+++ b/furble.html
@@ -10,7 +10,7 @@
     .row { display: flex; margin: .6em 0; align-items: center }
     .row button, .row input[type=range] { flex-grow: 1; margin: .2em; height: 3em}
 
-    #out { position: absolute; bottom: 0; left: 0; background: #eee; overflow: scroll; width: 100%; height: 12em; padding: 0.5em }
+    #out { display: none; position: absolute; bottom: 0; left: 0; background: #eee; overflow: scroll; width: 100%; height: 12em; padding: 0.5em }
 
     h1 { font-size: 15pt; margin: 0 0 0.3em 0}
     progress { width: 100%; display:none}
@@ -36,7 +36,6 @@
     <button onclick='triggerAction(39,3,8,1)'>Legendary!</button>
     <button onclick='triggerAction(39,4,6,1)'>Nice</button>
     <button onclick='triggerAction(39,3,1,1)'>Hey, hey</button>
-    <button onclick='triggerAction(53,0,0,4)'>Ooh</button>
 </div>
 
 <div class='row'>
