--- a/furble.html
+++ b/furble.html
@@ -36,10 +36,11 @@
     <button onclick='triggerAction(39,3,8,1)'>Legendary!</button>
     <button onclick='triggerAction(39,4,6,1)'>Nice</button>
     <button onclick='triggerAction(39,3,1,1)'>Hey, hey</button>
+    <button onclick='triggerAction(75,0,4,4)'>75,0,4,4</button>
 </div>
 
 <div class='row'>
-    <input id='dlcname' value='dlc/tu003410_ctxlogo.dlc'><button onclick="fetchAndUploadDLC(document.getElementById('dlcname').value)">Upload</button>
+    <input id='dlcname' value='dlc/tu003410_minified_chilli.dlc'><button onclick="fetchAndUploadDLC(document.getElementById('dlcname').value)">Upload</button>
 </div>
 <progress id='dlcprogress'></progress>
 <div id="out" style="white-space:pre">Console Log
