--- a/furble.html
+++ b/furble.html
@@ -1,177 +1,87 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
-<title>Furby WebBluetooth</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-    body { font-family: sans}
-    button, input, select { font-size: 14pt }
-    .row { display: flex; margin: .6em 0; align-items: center }
-    .row button, .row input, .row select { flex-grow: 1; margin: .2em; height: 3em}
-    body *  { user-select: none }
-
-    #console { 
-        position: fixed; 
-        bottom: 0; left: 0; 
-        background: #eee; 
-        left:0;
-        right: 0;
-        padding: 0.5em;
-
-    }
-
-    #console > h2::before { content: '+'; display: inline-block; margin: 0 .5em; width: 1em }
-    #console.expanded > h2::before { content: '—'}
-
-    #out {
-        overflow-y: scroll; 
-        height:2em;
-        transition-property: height;
-        transition-duration: 0.3s;
-    }
-
-    #console.expanded #out {
-        height: 25em; 
-    }
-
-    button#hamburger { float: left }
-    body.keyboard #console { display: none }
-    
-    #console h2 { margin: 0; padding: 0 }
-    h1 { font-size: 15pt; margin: 0 0 0.3em 0}
-    progress { width: 100%; display:none}
-
-    #status { 
-        position: absolute; 
-        font-size: 20pt;
-        top:0;
-        left:0; 
-        right: 0;
-        padding: .2em;
-        color: white;
-        text-align: center;
-        box-shadow: 0px 5px 5px rgba(0,0,0,0.2);
-        transform: translateX(-100%);
-        transition-property: transform;
-        transition-duration: 0.3s;
-    }
-    #status.on { transform: translateX(0);}
-    #status.error { background-color: rgb(226, 52, 52) }
-    #status.ok { background-color: rgb(53, 185, 0) }
-
-    #menu { 
-        position: fixed; 
-        left: 0; 
-        top: 0; 
-        bottom: 0; 
-        color: white;
-        background-color: rgb(7, 68, 117); 
-        
-        transform: translateX(-100%);
-        transition-property: transform;
-        transition-duration: 0.3s;
-    }
-
-    #menu h2 { padding: 0em 2em }
-    #menu a { 
-        color: white; 
-        text-decoration: none; 
-        display: block; 
-        padding: 1em 2em;
-    }
-
-    #menu a.current { 
-        background-color: lightblue;
-        color: black;
-    }
-
-    #hamburger:focus + #menu { 
-        transform: translateX(0);
-        box-shadow: 5px 0px 5px rgba(0,0,0,0.4);
-    }
-    #menu ul { padding: 0 }
-    #menu li { list-style: none; padding: 0; margin: 0}
-
-    section { display: none}
-
-    section.current { display: block }
-</style>
-
+    <meta charset='utf-8' />
+    <title>Furby Web Bluetooth</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' href='furble.css'>
 </head>
 <body>
 
 <div id='status' class='ok'>Connected!</div>
 <button id='hamburger'>☰</button>
+
 <div id='menu'>
     <h2>FurBLE</h2>
-        <ul>
+    <ul>
+        <li><a href='#actions'>Actions</a></li>
+        <li><a href='#misc'>Misc</a></li>
+        <li><a href='#dlc'>DLC Upload</a></li>
+        <li><a href='#sensors'>Sensors</a></li>
+        <li><a href='#debug'>Debug</a></li>
+    </ul>
+</div>
 
-            <li><a href='#actions'>Actions</a></li>
-            <li><a href='#misc'>Misc</a></li>
-            <li><a href='#dlc'>DLC Upload</a></li>
-            <li><a href='#sensors'>Sensors</a></li>
-            <li><a href='#debug'>Debug</a></li>
-        </ul>
-    </div>
 <div class='row'>
     <div><h1>FurBLE</h1>
-    <span id="state">Not connected</span></div>
-    <button id="connbtn" onclick="doConnectDisconnect()">Connect</button>
+    <span id='state'>Not connected</span></div>
+    <button id='connbtn' onclick='doConnectDisconnect()'>Connect</button>
 </div>
+
 <div id='furby-buttons'>
 
-<section id='misc'>
-    <h2>Misc buttons</h2>
-    <div class='row'>
-        <button onclick='setAntennaColor(255, 0,0)'>Red</button>
-        <button onclick='setAntennaColor(0, 255,0)'>Green</button>
-        <button onclick='setAntennaColor(0, 0, 255)'>Blue</button>
-        <button onclick='setAntennaColor(255, 255, 255)'>White</button>
-    </div>
-</section>
+    <section id='misc'>
+        <h2>Misc buttons</h2>
+        <div class='row'>
+            <button onclick='setAntennaColor(255, 0,0)'>Red</button>
+            <button onclick='setAntennaColor(0, 255,0)'>Green</button>
+            <button onclick='setAntennaColor(0, 0, 255)'>Blue</button>
+            <button onclick='setAntennaColor(255, 255, 255)'>White</button>
+        </div>
+    </section>
 
-<section id='actions'>
-    <h2>Action Sequences</h2>
-    <div class='row' id='dlc-actions'></div>
-    <div class='row'>
-        <button onclick='triggerAction(39,3,8,1)'>Legendary!</button>
-        <button onclick='triggerAction(39,4,6,1)'>Nice</button>
-        <button onclick='triggerAction(39,3,1,1)'>Hey, hey</button>
-    </div>
-    <div class='row'>
-        <input type='number' min='0' max='75' name='furby-action' value='39'>
-        <input type='number' min='0' max='4' name='furby-action' value='0'>
-        <input type='number' min='0' max='30' name='furby-action' value='0'>
-        <input type='number' min='0' max='10' name='furby-action' value='0'>
-        <button onclick='customAction()'>Send</button>
-    </div>
-</section>
+    <section id='actions'>
+        <h2>Action Sequences</h2>
+        <div class='row' id='dlc-actions'></div>
+        <div class='row'>
+            <button onclick='triggerAction(39,3,8,1)'>Legendary!</button>
+            <button onclick='triggerAction(39,4,6,1)'>Nice</button>
+            <button onclick='triggerAction(39,3,1,1)'>Hey, hey</button>
+        </div>
+        <div class='row'>
+            <input type='number' min='0' max='75' name='furby-action' value='39'>
+            <input type='number' min='0' max='4' name='furby-action' value='0'>
+            <input type='number' min='0' max='30' name='furby-action' value='0'>
+            <input type='number' min='0' max='10' name='furby-action' value='0'>
+            <button onclick='customAction()'>Send</button>
+        </div>
+    </section>
 
-<section id='debug'>
-    <h2>Debug</h2>
-    <div class='row'>
-        <button onclick='cycleDebug()'>Eye Debug</button>   
-    </div>
-</section>
+    <section id='debug'>
+        <h2>Debug</h2>
+        <div class='row'>
+            <button onclick='cycleDebug()'>Eye Debug</button>   
+        </div>
+    </section>
 
-<section id='dlc'>
-    DLC Files
-    <div class='row'>
-        <select id='dlcname'>
-        </select>
-        <button onclick="dlcUploadClicked()">Upload</button>
-    </div>
-    <progress id='dlcprogress'></progress>
-</section>
+    <section id='dlc'>
+        DLC Files
+        <div class='row'>
+            <select id='dlcname'>
+            </select>
+            <button onclick='dlcUploadClicked()'>Upload</button>
+        </div>
+        <progress id='dlcprogress'></progress>
+    </section>
 
 </div>
 
 
-<div id="console">
+<div id='console'>
     <h2 onclick='toggleConsole()'>Console</h2>
-<div id="out" style="white-space:pre"></div>
+    <div id='out' style='white-space:pre'></div>
 </div>
+
 <script>
 var dlcsel = document.getElementById('dlcname');
 var s = document.createElement('script');
@@ -213,9 +123,10 @@ var msg = {
     error: s => showStatus(s, 'error'),
 };
 
-
 window.onhashchange = () => showSection(location.hash.substr(1));
 let currentSection = '';
+let dlcdata = {};
+
 function showSection(section) {
     if (currentSection) {
         try {
@@ -266,9 +177,6 @@ function setupDLCButtons(dlcParams) {
         container.appendChild(button);
     });
 }
-
-let dlcdata = {};
-
 
 </script>
 
