--- a/furble.html
+++ b/furble.html
@@ -152,7 +152,7 @@ function showSection(section) {
 }
 
 async function loadDLCIndex() {
-    let resp = await fetch('dlc/_index.json');
+    let resp = await fetch('dlc/index.json');
     let data = await resp.json();
 
     for (let dlc of data) {
