fix header css, section titles

--- a/furble.html
+++ b/furble.html
@@ -35,7 +35,7 @@
 <div id='furby-buttons'>
 
     <section id='misc'>
-        <h2>Misc buttons</h2>
+        <h2>Antenna Colour</h2>
         <div class='row'>
             <button onclick='setAntennaColor(255, 0,0)'>Red</button>
             <button onclick='setAntennaColor(0, 255,0)'>Green</button>
@@ -69,7 +69,7 @@
     </section>
 
     <section id='dlc'>
-        DLC Files
+        <h2>DLC Files</h2>
         <div class='row'>
             <select id='dlcname'>
             </select>
