show placeholder for sensor state

--- a/furble.html
+++ b/furble.html
@@ -78,13 +78,13 @@
     </section>
 
     <section id='sensors'>
-        <!--<h2>Sensors</h2>
-        <div class='row'>
+        <h2>Sensors</h2>
+        <!--<div class='row'>
                 <button onclick='sendGPCmd([0x20, 0x0d])'>Start continuous</button>
                 <button onclick='sendGPCmd([0x20, 0x0e])'>Stop continuous</button>
         </div>
         <h2>State</h2>-->
-        <ul id='sensor-state'></ul>
+        <ul id='sensor-state'><li>Waiting for connection...</li></ul>
     </section>
 
 </div>
