--- a/furble.html
+++ b/furble.html
@@ -89,7 +89,7 @@
 
     <section id='no-web-bluetooth'>
         <h3>Sorry, this browser doesn't seem to support Web Bluetooth. Works best with Chrome for Android.</h3>
-    </section>s
+    </section>
 </div>
 
 
