tweak console and add some logging

--- a/furble.html
+++ b/furble.html
@@ -94,7 +94,7 @@
 
 
 <div id="console">
-    <button onclick='log2clipboard()' class='clip'>Copy to Clipboard</button> <h2 onclick='toggleConsole()'>Console</h2>
+    <button onclick='log2clipboard()' class='clip'>Copy to Clipboard</button> <h3 onclick='toggleConsole()'>Log Output</h3>
 <div id="out" style="white-space:pre"></div>
 </div>
 
