Update README, add buttons to turn eyes on/off

--- a/furble.html
+++ b/furble.html
@@ -64,7 +64,9 @@
     <section id='debug'>
         <h2>Debug</h2>
         <div class='row'>
-            <button onclick='cycleDebug()'>Eye Debug</button>   
+            <button onclick='cycleDebug()'>Eye Debug</button>
+            <button onclick='enableEyes(false)'>Eyes off</button>
+            <button onclick='enableEyes(true)'>Eyes on</button>
         </div>
     </section>
 
